# SlideForge

./: .gitignore  LLM_CONTEXT.md  README.md  SLIDE_SPEC_RULES.md  pyproject.toml  ~$ML_Foundations_Auto.pptx
src/: slideforge_app.py
src/slideforge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/slideforge/app/: build_deck.py  presentation_factory.py
src/slideforge/assets/: mini_visual_contracts.py  mini_visuals.py  mini_visuals_common.py  mini_visuals_core.py  mini_visuals_geometry.py
src/slideforge/builders/: __init__.py  analytic_panel.py  annotated_pipeline.py  basic.py  builder_registry.py  card_grid.py  common.py  concept_poster.py  dependency_map.py  example_pipeline.py  integrated_bridge.py  multi_panel_summary.py  notation_panel.py  pipeline.py  prereq_grid.py  registry.py  section_divider.py  title_composite.py  triple_role.py  triple_role_bands.py  triple_role_panels.py  triple_role_style.py  worked_example_panel.py
src/slideforge/config/: constants.py  paths.py  themes.py
src/slideforge/debug/: slide_qc.py
src/slideforge/io/: backgrounds.py
src/slideforge/layout/: __init__.py  analytic_panel.py  autofit.py  base.py  cards.py  dependency.py  grid.py  multi_panel_summary.py  pipeline.py  poster.py  stack.py  table.py  text_fit.py  title_composite.py  worked_example.py
src/slideforge/projects/: __init__.py
src/slideforge/render/: cards.py  connectors.py  decorations.py  header.py  math_blocks.py  multi_panel_cards.py  pipeline_blocks.py  primitives.py  text.py  title_panels.py
src/slideforge/spec/: __init__.py  (+1 more)
(+13 files in other folders)
